complete non-routing

--- a/BlogBee/src/app/navbar/navbar.component.html
+++ b/BlogBee/src/app/navbar/navbar.component.html
@@ -30,23 +30,20 @@
       ><img src="assets/images/home.png" />
       <p>Home</p></a
     >
-    <a href="#" routerLink="favList"
+    <a href="" routerLink="favList"
       ><img src="assets/images/favicon.png" />
       <p>Favourite List</p></a
     >
    
-    <a href="#"
+    <a href="" routerLink="history"
       ><img src="assets/images/history.png" />
       <p>History</p></a
     >
-    <a href="#"
+    <a href="" routerLink="about-us"
       ><img src="assets/images/about.png" />
       <p>About</p></a
     >
-    <a href="#"
-      ><img src="assets/images/help.png" />
-      <p>Help</p></a
-    >
+   
     <hr />
   </div>
 </div>
