--- a/BlogBee/src/app/sign-in/sign-in.component.html
+++ b/BlogBee/src/app/sign-in/sign-in.component.html
@@ -70,6 +70,6 @@
       <button class="btn mt-3">Login</button>
   </form>
   <div class="text-center fs-6">
-      <a href="#">Forget password?</a> or <a href="#">Sign up</a>
+      <a href="#">Forget password?</a> or <a href="#" routerLink="signup">Sign up</a>
   </div>
 </div>
