--- a/BlogBee/src/app/signup/signup.component.html
+++ b/BlogBee/src/app/signup/signup.component.html
@@ -1,4 +1,4 @@
-<!-- <section class="vh-100" style="background-color: #eee">
+ <section class="vh-100" style="background-color: #eee">
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-lg-12 col-xl-11">
@@ -108,7 +108,7 @@
 
 
 
-
+<!--
 
 
 
@@ -161,18 +161,18 @@
     </div>
 </div>  
 </section>
-</div> --> 
+</div> 
 
 
+-->
+<!--
 
 
-
-
-<section class=" bg-image"
+  <section class=" bg-image"
   style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
   <div class=" d-flex align-items-center h-100 gradient-custom-3">
     <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-55">
+      <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
           <div class="card " style="border-radius: 15px;">
             <div class="front-form">
@@ -218,3 +218,7 @@
     </div>
   </div>
 </section>
+
+-->
+
+
