--- a/BlogBee/src/app/blog-view/blog-view.component.html
+++ b/BlogBee/src/app/blog-view/blog-view.component.html
@@ -1,9 +1,14 @@
-<h1>{{blogs[0].title}}</h1>
-
-<p *ngFor="let blog of blogs">{{blog.text}}</p>
+<div>
+    <h1 class="heading">{{blogs[0].title}}</h1>
+</div>
 
 <div>
+    <p *ngFor="let blog of blogs" class="text">{{blog.text}}</p>
+</div>
+
+
+<!-- <div>
     <button class="btn bg-primary mr-5">Favourite</button>
     <button class="btn bg-warning ml-5">Rate</button>
-</div>
+</div> -->
 
