--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -1,21 +1,21 @@
 <div>
   <div class="list-container">
-    <div class="vid-list shadow p-3 mb-5 bg-white rounded" *ngFor="let video of recommendedVideos">
+    <div class="vid-list shadow p-3 mb-5 rounded" *ngFor="let video of recommendedVideos">
       <div class="group1">
       <img src="{{'https://img.youtube.com/vi/' + video.videoId+'/0.jpg'}}" (click)="showBlog(video)" class="thumbnail" alt="Thumbnail" />
       <div class="flex-div">
         <div class="vid-info">
-          <u><p (click)="showBlog(video)">{{video.title}}</p></u>
+          <p (click)="showBlog(video)">{{video.title}}</p>
           <!--<a href="" routerLink="blogView" >{{video.title}}</a>-->
         </div> 
       </div>
     </div>
 
 
-    <div class="group2">
+    <!-- <div class="group2">
       <button  class="btn bg-primary mr-4 btngrp">Favourite</button>
       <button class="btn bg-warning ml-4 btngrp">Rate</button>
-    </div>
+    </div> -->
 
 
   </div>
