--- a/BlogBee/src/app/navbar/navbar.component.css
+++ b/BlogBee/src/app/navbar/navbar.component.css
@@ -2,7 +2,7 @@
 *{
   margin: 0;
   padding: 0;
-  font-family: 'poppins', 'sans-sherif';
+  font-family: 'sans-sherif','poppins';
   box-sizing: border-box;
 }
 a{
@@ -22,7 +22,7 @@ nav{
   padding: 10px 2%;
   justify-content: space-between;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  background: rgb(68, 64, 64);
+  background: #212020;
   position: sticky;
   top: 0;
   z-index: 10;
@@ -76,13 +76,15 @@ nav{
 /*sidebar component css*/
 
 .sidebar{
-  background-color: rgb(68, 64, 64);
+  background-color: #212020;
   width: 15%;
   height: 100vh;
   position: fixed;
   top: 0;
   padding-left: 2%;
   padding-top: 80px;
+  font-family: sans-serif;
+  font-weight: 1000;
 }
 
 .shortcut-links a img{
@@ -96,6 +98,7 @@ nav{
   margin-bottom: 20px;
   width: fit-content;
   flex-wrap: wrap;
+  color: #ccc;
 }
 
 .shortcut-links a:first-child{
