--- a/BlogBee/src/app/sign-in/sign-in.component.css
+++ b/BlogBee/src/app/sign-in/sign-in.component.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 /* Reseting */
 * {
@@ -7,18 +7,15 @@
     box-sizing: border-box;
 }
 
-body {
-    background: #ecf0f3;
-}
 
 .wrapper {
     max-width: 350px;
     min-height: 500px;
-    margin: 80px auto;
+    margin: 30px auto;
     padding: 40px 30px 30px 30px;
-    background-color: #ecf0f3;
+    background-color: #333b41;
     border-radius: 15px;
-    box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
+    
 }
 
 .logo {
