--- a/BlogBee/src/app/blog-view/blog-view.component.html
+++ b/BlogBee/src/app/blog-view/blog-view.component.html
@@ -6,6 +6,16 @@
     <p *ngFor="let blog of blogs" class="text">{{blog.text}}</p>
 </div>
 
+<div class="stand">
+    <h3>Topics: <span class="badge badge-primary">Politics</span>
+        <span class="badge badge-danger">Science</span>
+        <span class="badge badge-success">Religion</span>
+    
+    
+    </h3>
+
+</div>
+
 
 <!-- <div>
     <button class="btn bg-primary mr-5">Favourite</button>
