--- a/BlogBee/src/app/sign-in/sign-in.component.css
+++ b/BlogBee/src/app/sign-in/sign-in.component.css
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: #fff;
 }
 
 
@@ -28,10 +29,6 @@
     height: 80px;
     object-fit: cover;
     border-radius: 50%;
-    box-shadow: 0px 0px 3px #5f5f5f,
-        0px 0px 0px 5px #ecf0f3,
-        8px 8px 15px #a7aaa7,
-        -8px -8px 15px #fff;
 }
 
 .wrapper .name {
@@ -72,9 +69,9 @@
     background-color: #03A9F4;
     color: #fff;
     border-radius: 25px;
-    box-shadow: 3px 3px 3px #b1b1b1,
+    /* box-shadow: 3px 3px 3px #b1b1b1,
         -3px -3px 3px #fff;
-    letter-spacing: 1.3px;
+    letter-spacing: 1.3px; */
 }
 
 .wrapper .btn:hover {
