--- a/BlogBee/src/app/sign-in/sign-in.component.html
+++ b/BlogBee/src/app/sign-in/sign-in.component.html
@@ -1,53 +1,4 @@
-<!-- <div class="container">
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <h2 class="text-center text-dark mt-5">Welcome to BlogBee</h2>
-      <div class="card my-5">
-        <form class="card-body cardbody-color p-lg-5">
-          <div class="text-center">
-            <img
-              src="https://cdn.pixabay.com/photo/2016/03/31/19/56/avatar-1295397__340.png"
-              class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
-              width="200px"
-              alt="profile"
-            />
-          </div>
-          <div class="mb-3">
-            <input
-              type="text"
-              class="form-control"
-              id="Username"
-              aria-describedby="emailHelp"
-              placeholder="User Name"
-              [(ngModel)] = "logInfo.userName" [ngModelOptions]="{standalone: true}"
-            />
-          </div>
-          <div class="mb-3">
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              placeholder="password"
-              [(ngModel)] = "logInfo.password" [ngModelOptions]="{standalone: true}"
-            />
-          </div>
 
-          <div class="text-center">
-            <button type="submit" class="btn btn-color px-5 mb-5 w-100" (click)="loginButtonAction()">
-              Login
-            </button>
-            <span *ngIf="success" style="color:green">Log in Successful</span>
-          </div>
-
-          <div id="emailHelp" class="form-text text-center mb-5 text-dark">
-            Not Registered?
-            <a href="" routerLink="signup" class="text-dark fw-bold"> Create an Account</a>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div> -->
 
 <div class="wrapper">
   <div class="logo">
@@ -65,7 +16,7 @@
       <div class="form-field d-flex align-items-center">
           <span class="fas fa-key"></span>
           <input type="password" name="password" id="pwd" placeholder="Password"
-          [(ngModel)] = "logInfo.userName" [ngModelOptions]="{standalone: true}">
+          [(ngModel)] = "logInfo.password" [ngModelOptions]="{standalone: true}">
       </div>
       <button class="btn mt-3">Login</button>
   </form>
