--- a/BlogBee/src/app/signup/signup.component.html
+++ b/BlogBee/src/app/signup/signup.component.html
@@ -10,91 +10,59 @@
                     Sign up
                   </p>
   
-                  <form class="mx-1 mx-md-4">
+                  <form [formGroup]="signupForm" (ngSubmit)="signUp()" class="mx-1 mx-md-4">
+
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                      <div class="form-outline flex-fill mb-0">
-  
-                        <input
-                          type="text"
-                          id="form3Example1c"
-                          class="form-control"
-                          required
-                          [(ngModel)] = "userData.userName" [ngModelOptions]="{standalone: true}"
-                        />
-                        <label class="form-label" for="form3Example1c"
-                          >User Name</label
-                        >
+                        <div class="form-outline flex-fill mb-0">
+                          <label class="form-label" for="form3Example1c">User Name</label>
+                          <input type="text" id="form3Example1c" class="form-control" formControlName="userName"/>
+                          <span class="text-danger" *ngIf="signupForm.controls['userName'].dirty && signupForm.hasError('required','userName')">*User Name is Required</span>
                       </div>
                     </div>
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-  
-                        <input
-                          type="email"
-                          id="form3Example3c"
-                          class="form-control"
-                          required
-                          [(ngModel)] = "userData.email" [ngModelOptions]="{standalone: true}"
-                        />
-                        <label class="form-label" for="form3Example3c"
-                          >Email</label
-                        >
+                        <label class="form-label" for="form3Example3c">Email</label>                       
+                        <input type="email" id="form3Example3c" class="form-control" formControlName="email"/>
+                        <span class="text-danger" *ngIf="signupForm.controls['email'].dirty && signupForm.hasError('required','email')">*Email is Required</span>
                       </div>
                     </div>
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-  
-                        <input
-                          type="password"
-                          id="form3Example4c"
-                          class="form-control"
-                          required
-                          [(ngModel)] = "userData.password" [ngModelOptions]="{standalone: true}"
-                        />
-                        <label class="form-label" for="form3Example4c"
-                          >Password</label
-                        >
+                        <label class="form-label" for="form3Example4c">Password</label>
+                        <input type="password" id="form3Example4c" class="form-control" formControlName="password"/>
+                        <span class="text-danger" *ngIf="signupForm.controls['password'].dirty && signupForm.hasError('required','password')">*Password is Required</span>
                       </div>
                     </div>
   
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
-
-                        <span *ngIf="mismatch" style="color:red">Password Mismatch</span>
-                        
-                        <input
-                          type="password"
-                          id="form3Example4cd"
-                          class="form-control"
-                          required
-                          [(ngModel)] = "userData.rpassword" [ngModelOptions]="{standalone: true}"
-                        />
-                        <label class="form-label" for="form3Example4cd"
-                          >Repeat password</label
-                        >
+                        <label class="form-label" for="form3Example4cd">Repeat password</label>
+                        <input type="password" id="form3Example4cd" class="form-control" formControlName="rpassword"/>
+                        <span *ngIf="mismatch==1" style="color:red">*Password Mismatch</span>
+                        <span class="text-danger" *ngIf="signupForm.controls['rpassword'].dirty && signupForm.hasError('required','rpassword')">*Repeat password is Required</span>
                       </div>
                     </div>
   
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <input type="submit" class="btn btn-primary" (click)="signUpButtonAction()">
-              
+                      <input [disabled]="!signupForm.valid" type="submit" class="btn btn-primary">
                     </div>
+
+                    
+                    <p class="text-center text-muted mt-5 mb-0">Have already an account? 
+                      <a routerLink="/signin" href="#!" class="fw-bold text-body"><u>Login here</u></a>
+                    </p>
+
                   </form>
+
                 </div>
-                <div
-                  class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2"
-                >
-                  <img
-                    src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                    class="img-fluid"
-                    alt="Sample image"
-                  />
+                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+                  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp" class="img-fluid"/>
                 </div>
               </div>
             </div>
