--- a/BlogBee/src/app/signup/signup.component.html
+++ b/BlogBee/src/app/signup/signup.component.html
@@ -53,9 +53,9 @@
                       <input [disabled]="!signupForm.valid" type="submit" class="btn btn-primary">
                     </div>
 
-                    
+
                     <p class="text-center text-muted mt-5 mb-0">Have already an account? 
-                      <a routerLink="/signin" href="#!" class="fw-bold text-body"><u>Login here</u></a>
+                      <a routerLink="/signin" href="#!" class="fw-bold text-body"><u>Signin here</u></a>
                     </p>
 
                   </form>
