--- a/BlogBee/src/app/history/history.component.html
+++ b/BlogBee/src/app/history/history.component.html
@@ -1,7 +1,11 @@
+<div class="layout">
+
+
+
 <table class="table">
     <thead>
       <tr>
-        <th scope="col">Video Title</th>
+        <th scope="col" >Video Title</th>
         <th scope="col">Action</th>
         <th scope="col">Date</th>
         <th scope="col">Time</th>
@@ -22,3 +26,4 @@
         </tr>
       </tbody>
   </table>
+</div>
