--- a/BlogBee/src/app/favourite-list/favourite-list.component.css
+++ b/BlogBee/src/app/favourite-list/favourite-list.component.css
@@ -35,3 +35,10 @@
     display: block;
     margin-bottom: 5px;
 }
+
+
+.fav-info{
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    font-family: sans-serif;
+}
