design fav list with text color

--- a/BlogBee/src/app/favourite-list/favourite-list.component.html
+++ b/BlogBee/src/app/favourite-list/favourite-list.component.html
@@ -5,7 +5,7 @@
       <div class="flex-div">
 
         <div class="vid-info">
-          <a href="" routerLink="blogView" class="fav-info">{{video.title}}</a>
+          <a href="" routerLink="blogView" style="color:ghostwhite;">{{video.title}}</a>
           <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="#" class="btn btn-primary">Remove</a> -->
         </div>
