add to fav list

--- a/BlogBee/src/app/favourite-list/favourite-list.component.html
+++ b/BlogBee/src/app/favourite-list/favourite-list.component.html
@@ -6,9 +6,9 @@
 
         <div class="vid-info">
           <a href="" routerLink="blogView" style="color:ghostwhite;">{{video.title}}</a>
-         <span > <button type="button" style="margin-right: 18px;" class="btn btn-outline-success">Add to Favourite</button>
+         <span > <button type="button" style="margin-right: 24px;margin-top: 20px;" class="btn btn-outline-success">Add to Favourite</button>
           
-          <button type="button" class="btn btn-outline-primary">Rating</button>
+          <button type="button" class="btn btn-outline-primary" style="margin-top: 20px;">Rating</button>
          </span>
         </div>
       </div>
