--- a/BlogBee/src/app/favourite-list/favourite-list.component.html
+++ b/BlogBee/src/app/favourite-list/favourite-list.component.html
@@ -5,10 +5,12 @@
       <div class="flex-div">
 
         <div class="vid-info">
+          <div class="title-box">
           <a href="" routerLink="blogView" style="color:ghostwhite;">{{video.title}}</a>
+        </div>
          <span > <button type="button" style="margin-right: 24px;margin-top: 20px;" class="btn btn-outline-success">Add to Favourite</button>
           
-          <button type="button" class="btn btn-outline-primary" style="margin-top: 20px;">Rating</button>
+          <button type="button" class="btn btn-outline-primary" style="margin-top: 20px;" (click)="ratingContent()">Rating</button>
          </span>
         </div>
       </div>
