--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -11,12 +11,10 @@
       </div>
     </div>
 
-
-    <!-- <div class="group2">
-      <button  class="btn bg-primary mr-4 btngrp">Favourite</button>
-      <button class="btn bg-warning ml-4 btngrp">Rate</button>
-    </div> -->
-
+    <div class="group2">
+      <button  class="btn btn-outline-light mr-4 btngrp">Add to Favourite</button>
+      <button class="btn btn-outline-light ml-4 btngrp">Rate</button>
+    </div>
 
   </div>
 
