--- a/BlogBee/src/app/navbar/navbar.component.html
+++ b/BlogBee/src/app/navbar/navbar.component.html
@@ -18,9 +18,9 @@
   </div>
 
   <div class="nav-right flex-div">
-    <button *ngIf="!loggedIn" type="button" class="btn btn-secondary btn-lg" (click)="signin()">Sign In</button>
-    <button *ngIf="loggedIn" type="button" class="btn btn-secondary btn-lg" (click)="signout()">Sign Out</button>
-    <!--img src="assets/images/r.png" class="user-icon" alt="User-Icon" /-->
+    <button *ngIf="!accService.loginObject" class="btn btn-success" (click)="signin()">Sign In</button>
+    <button *ngIf="accService.loginObject" class="btn btn-danger " (click)="signout()">Sign Out</button>
+    <img *ngIf="accService.loginObject" src="assets/images/r.png" class="user-icon" alt="User-Icon">
   </div>
 </nav>
 
