--- a/BlogBee/src/styles.css
+++ b/BlogBee/src/styles.css
@@ -8973,3 +8973,5 @@
     }
   }
   /*# sourceMappingURL=bootstrap.css.map */
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
