--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="group2">
-      <button  class="btn btn-outline-light mr-4 btngrp">Add to Favourite</button>
+      <button (click)="addToFavouriteButton(video.videoId)"  class="btn btn-outline-light mr-4 btngrp">Add to Favourite</button>
       <button class="btn btn-outline-light ml-4 btngrp">Rate</button>
     </div>
 
