--- a/BlogBee/src/app/rating/rating.component.html
+++ b/BlogBee/src/app/rating/rating.component.html
@@ -1,8 +1,7 @@
 <div class="size">
-
     <ngb-rating [max]="5" [(rate)]="starRating" [readonly]="false">
     </ngb-rating>
     <br>
-    <button class="btn btn-info btn-sm" (click)="returnToHome()">Submit</button>
+    <button class="btn btn-info btn-sm" (click)="addToRatingData()">Submit</button>
 </div>
     
