--- a/BlogBee/src/app/favourite-list/favourite-list.component.html
+++ b/BlogBee/src/app/favourite-list/favourite-list.component.html
@@ -10,7 +10,7 @@
         </div>
          <span > <button type="button" style="margin-right: 24px;margin-top: 20px;" class="btn btn-outline-success">Add to Favourite</button>
           
-          <button type="button" class="btn btn-outline-primary" style="margin-top: 20px;" (click)="ratingContent()">Rating</button>
+          <button type="button" class="btn btn-outline-primary" style="margin-top: 20px;">Rating</button>
          </span>
         </div>
       </div>
