--- a/BlogBee/src/app/about-us/about-us.component.html
+++ b/BlogBee/src/app/about-us/about-us.component.html
@@ -2,11 +2,18 @@
     <h1 class="text-center bg-primary">About Us
     </h1>
     
+    <img src="../../assets/images/BlogBee.png" alt="BlogBee" height="170px" width="165px">
     <p class="about-des">
         
     BlogBee is a blog based social media where we can read blog, 
     rated the blog and share it with others. 
     Those blogs are auto generated from youtube videos.
+    <br>
+    BlogBee is a web application in which a user can search
+    for youtube video content and the system will display the
+    textual version of the youtube content. The system will
+    also classify the blog and provide recommendations based
+    on the user’s rating on blogs.
     </p>
     
     
@@ -16,7 +23,7 @@
             <div class="card col-3 m-4">
                 <div class="card-body">
     
-                    <h5 class="card-title"><b>Md. Rakib Trofder</b></h5>
+                    <h4 class="card-title"><b>Md. Rakib Trofder</b></h4>
                     <p class="card-text">Co-founder, BlogBee</p>
                     <p class="card-text">BSSE 3rd Year</p>
                     <p class="card-text">Institute of Information Technology</p>
@@ -26,7 +33,7 @@
     
             <div class="card col-3 m-4">
                 <div class="card-body">
-                    <h5 class="card-title"><b>Md. Muktar Hosen</b></h5>
+                    <h4 class="card-title"><b>Md. Muktar Hosen</b></h4>
                     <p class="card-text">Co-founder, BlogBee</p>
                     <p class="card-text">BSSE 3rd Year</p>
                     <p class="card-text">Institute of Information Technology</p>
@@ -36,7 +43,7 @@
     
             <div class="card col-3 m-4">
                 <div class="card-body">
-                    <h5 class="card-title"><b>Kishan Kumar Ganguly</b></h5>
+                    <h4 class="card-title"><b>Kishan Kumar Ganguly</b></h4>
                     <p class="card-text">Supervisor, BlogBee</p>
                     <p class="card-text">Assistant Professor</p>
                     <p class="card-text">Institute of Information Technology</p>
