--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -12,8 +12,8 @@
     </div>
 
     <div class="group2">
-      <button (click)="addToFavouriteButton(video.videoId)"  class="btn btn-outline-light mr-4 btngrp">Add to Favourite</button>
-      <button (click)="ratingButton(video.videoId)" class="btn btn-outline-light ml-4 btngrp">Rate</button>
+      <button (click)="addToFavouriteButton(video.videoId)"  class="btn btn-success mr-4 btngrp">Add to Favourite</button>
+      <button (click)="ratingButton(video.videoId)" class="btn btn-primary ml-4 btngrp">Rate</button>
     </div>
 
   </div>
