--- a/BlogBee/src/app/favourite-list/favourite-list.component.html
+++ b/BlogBee/src/app/favourite-list/favourite-list.component.html
@@ -8,9 +8,9 @@
           <div class="title-box">
           <a href="" routerLink="blogView" style="color:ghostwhite;">{{video.title}}</a>
         </div>
-         <span > <button type="button" style="margin-right: 24px;margin-top: 20px;" class="btn btn-outline-success">Add to Favourite</button>
+         <span > <button type="button" style="margin-right: 24px;margin-top: 20px;" class="btn btn-success">Remove From Favourite</button>
           
-          <button type="button" class="btn btn-outline-primary" style="margin-top: 20px;">Rating</button>
+          <button type="button" class="btn btn-primary" style="margin-top: 20px;">Rating</button>
          </span>
         </div>
       </div>
