--- a/BlogBee/src/app/favourite-list/favourite-list.component.html
+++ b/BlogBee/src/app/favourite-list/favourite-list.component.html
@@ -6,9 +6,9 @@
 
         <div class="vid-info">
           <div class="title-box">
-          <a href="" routerLink="blogView" style="color:ghostwhite;">{{video.title}}</a>
+          <a href="" routerLink="blogView">{{video.title}}</a>
         </div>
-         <span > <button type="button" style="margin-right: 24px;margin-top: 20px;" class="btn btn-success">Remove From Favourite</button>
+         <span > <button type="button" style="margin-right: 65px;margin-top: 20px;" class="btn btn-success">Remove(-)</button>
           
           <button type="button" class="btn btn-primary" style="margin-top: 20px;">Rating</button>
          </span>
