--- a/BlogBee/src/app/blog-view/blog-view.component.css
+++ b/BlogBee/src/app/blog-view/blog-view.component.css
@@ -1,11 +1,12 @@
 .heading{
-    color: white;
+    color: black;
     text-align: center;
 }
 .text{
     text-align: justify;
-    color: white;
+    color: black;
     line-height: 40px;
+    font-size: large;
 }
 
 .stand{
