--- a/BlogBee/src/app/favourite-list/favourite-list.component.css
+++ b/BlogBee/src/app/favourite-list/favourite-list.component.css
@@ -1,10 +1,14 @@
 .list-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
-    grid-column-gap: 16px;
+    grid-column-gap: 10px;
     grid-row-gap: 30px;
     margin-top: 15px;
+}
 
+.vid-list{
+   border-radius: 15px;
+   color: black;
 }
 
 .vid-list .thumbnail{
@@ -16,6 +20,7 @@
 .vid-list .flex-div{
    align-items: flex-start;
    margin-top: 7px;
+ 
 }
 
 .vid-list .flex-div img{
@@ -25,24 +30,17 @@
 }
 
 .vid-info{
-    color: #5a5a5a;
-    font-size: 13px;
-}
-
-.vid-info a{
-    color:white;
-    font-weight: 600;
-    display: block;
-    margin-bottom: 5px;
-}
-
-
-.fav-info{
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-size: 15px;
     font-family: sans-serif;
 }
 
-.title-box{
-    height: 20px;
+.vid-info a{
+    color:#000;
+    font-weight: 1000;
+    display: block;
+    margin-bottom: 5px;
+}
+p{
+    color: #000;
 }
