--- a/BlogBee/src/app/home/home.component.html
+++ b/BlogBee/src/app/home/home.component.html
@@ -12,14 +12,12 @@
 
     <div class="group2">
 
-      <span > <button (click)="addToFavouriteButton(video.videoId)"  type="button" style="margin-right: 24px;margin-top: 20px;" class="btn btn-success">Favourite(+)</button>
+      <span > <button  (click)="addToFavouriteButton(video.videoId,video.title)"  type="button" style="margin-right: 24px;margin-top: 20px;" class="btn btn-success">Favourite(+)</button>
           
-        <button (click)="ratingButton(video.videoId)" type="button" class="btn btn-primary" style="margin-top: 20px;">Rate</button></span>
+        <button  (click)="ratingButton(video.videoId)" type="button" class="btn btn-primary" style="margin-top: 20px;">Rate</button></span>
     </div>
 
   </div>
 
   </div>
 </div>
-
-
