--- a/BlogBee/src/app/navbar/navbar.component.css
+++ b/BlogBee/src/app/navbar/navbar.component.css
@@ -1,4 +1,3 @@
-/*nav bar compononent css*/
 *{
   margin: 0;
   padding: 0;
@@ -21,8 +20,8 @@ img{
 nav{
   padding: 10px 2%;
   justify-content: space-between;
-  box-shadow: 0 0 10px white;
-  background: white;
+  box-shadow: 0 0 5px rgb(69, 69, 69);
+  background: rgb(255, 255, 255);
   position: sticky;
   top: 0;
   z-index: 10;
@@ -101,8 +100,6 @@ nav{
   color: black;
 }
 
-
-
 .shortcut-links hr{
   border: 0;
   height: 1px;
@@ -122,146 +119,3 @@ nav{
   width: 50%;
   margin-top: 25px;
 }
-
-/*
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box;}
-
-
-
-input[type=text], input[type=password] {
-  width: 300px;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
-}
-
-
-input[type=text]:focus, input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
-}
-.nav-button{
-  margin: 10px 10px;
-  position: relative;
-}
-
-
-button {
-  background-color: #85dce7;
-  color: rgb(0, 0, 0);
-  padding: 14px -5px;
-  margin: 23px 5px;
-  border: none;
-  cursor: pointer;
-  width: auto;
-  height: 40px;
-  opacity: 0.9;
-}
-
-button:hover {
-  opacity:1;
-  color: #474e5d;
-}
-
-
-.cancelbtn {
-  padding: 14px 20px;
-  background-color: #f44336;
-}
-
-
-.cancelbtn, .signupbtn {
-  float: left;
-  width: 50%;
-}
-
-
-.container {
-  padding: 16px;
-}
-
-
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 312px;
-  top: 10px;
-  width: 511px;
-  height: auto;
-  background-color: #474e5d;
-  padding-top: 34px;
-}
-
-
-.modal-content {
-  background-color: #fefefe;
-  margin: -22px 4px; 
-  border: 32px solid #888;
-  width: 100%; 
-}
-
-
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-}
- 
-
-.close {
-  position: absolute;
-  right: 35px;
-  top: 15px;
-  font-size: 40px;
-  font-weight: bold;
-  color: #f1f1f1;
-}
-
-.close:hover,
-.close:focus {
-  color: #f44336;
-  cursor: pointer;
-}
-
-
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-
-@media screen and (max-width: 300px) {
-  .cancelbtn, .signupbtn {
-     width: 50%;
-     height: 40px;
-     
-  }
-}
-.navbar-brand{
-  color: crimson;
-}
-.search-box{
-  width: 600px;
-  height: 40px;
-  margin: 23px;
-}
-
-.container-fluid{
-  height: 50px;
-  background-color: rgba(120, 112, 226, 0.342);
-}
-#search {
-  background-image: "assets/search.png";
-  background-repeat: no-repeat;
-  
-}
-.nav-icon{
-  width: 25px;
-  height: 25px;
-  margin: 15px 5px;
-} 
-*/
