trying to fix display error

--- a/BlogBee/src/app/blog-view/blog-view.component.html
+++ b/BlogBee/src/app/blog-view/blog-view.component.html
@@ -1,10 +1,10 @@
 
     <div>
-        <h1 class="heading">{{blogs[0].title}}</h1>
+        <h1 class="heading">{{blogs.title}}</h1>
     </div>
 
     <div>
-        <p *ngFor="let blog of blogs" class="text">{{blog.text}}</p>
+        <p *ngFor="let blog of blogs" class="text">{{blogs.text}}</p>
     </div>
 
     <div class="stand">
