complete showcaseable project

--- a/BlogBee/src/app/blog-view/blog-view.component.html
+++ b/BlogBee/src/app/blog-view/blog-view.component.html
@@ -9,7 +9,7 @@
 
     <div class="stand">
         <h3>Topics:
-          <span *ngFor="let tag of tags" class="badge" [ngClass]="getRandomBootstrapClass()">
+          <span *ngFor="let tag of tags" class="badge badge-success" >
             {{ tag }}
           </span>
         </h3>
@@ -17,3 +17,4 @@
 
 
 
+      <!-- [ngClass]="getRandomBootstrapClass()" -->
