--- a/BlogBee/src/app/navbar/navbar.component.html
+++ b/BlogBee/src/app/navbar/navbar.component.html
@@ -28,8 +28,8 @@
 <div class="sidebar" [class.small-sidebar]="click == 0">
   <div class="shortcut-links">
     <a href=""><img src="assets/images/home.png" /><p>Home</p></a>
-    <a href="" routerLink="favList"><img src="assets/images/favlist.png" /><p>Favourite List</p></a>
-    <a href="" routerLink="history"><img src="assets/images/history.png" /><p>History</p></a>
+    <!-- <a href="" routerLink="favList"><img src="assets/images/favlist.png" /><p>Favourite List</p></a>
+    <a href="" routerLink="history"><img src="assets/images/history.png" /><p>History</p></a> -->
     <a href="" routerLink="about-us"><img src="assets/images/about.png" /><p>About Us</p></a>
     <hr />
   </div>
