--- a/BlogBee/src/app/blog-view/blog-view.component.html
+++ b/BlogBee/src/app/blog-view/blog-view.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div>
-        <p class="text">{{blogs[0]?.text}}</p>
+        <p class="text">{{transform(blogs[0].text)}}</p>
     </div>
 
     <div class="stand">
